--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "bind007, my personal journey in engineering."
+title: "bind007, my personal journey."
 email: "bind007@proton.me"
-description: "Free space for my engineering journey."
+description: "Free space for engineering and tech."
 baseurl: "" # no cambies esto
 url: "https://bind007.github.io" # URL de tu blog
 
